# agrirover

./: .gitignore  README.md
agrirover/: CMakeLists.txt  package.xml
agrirover_bringup/: CMakeLists.txt  package.xml  setup.cfg  setup.py
agrirover_bringup/launch/: arm_ros2_control.launch.py  fruit_picking_system.launch.py  hardware_only.launch.py  robot_bringup.launch.py
agrirover_bringup/scripts/: agrirover_gazebo.sh  agrirover_gazebo_and_moveit.sh  agrirover_moveit.sh
agrirover_description/: CMakeLists.txt  package.xml
agrirover_description/launch/: robot_state_publisher.launch.py
agrirover_description/meshes/: Base.stl  Base_simplified.stl  Link_0.stl  Link_0_simplified.stl  Link_1.stl  Link_2.stl  Link_2_simplified.stl  end_effector.stl  end_effector_simplified.stl  finger.stl  gripper.stl  gripper_simplified.stl
agrirover_manipulation/: CMakeLists.txt  package.xml  setup.cfg  setup.py
agrirover_manipulation/agrirover_manipulation/: cmd_serial_node.py  goal_sender_node.py  pick_and_place.py  task_node.py
agrirover_manipulation/motor_commands/: motor_commands.ino
agrirover_moveit_config/: .setup_assistant  CMakeLists.txt  package.xml
agrirover_moveit_config/config/: arm.srdf  arm_controllers.yaml  initial_positions.yaml  joint_limits.yaml  kinematics.yaml  moveit_controllers.yaml  ompl_planning.yaml  pilz_industrial_motion_planner_planning.yaml  ros2_controllers_template.yaml  stomp_planning.yaml
agrirover_moveit_config/launch/: move_group.launch.py
agrirover_perception/: package.xml  setup.cfg  setup.py
(+6 files in other folders)
